Fix text legibility

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,7 +2,7 @@ body {
   background-image: url('../img/lamps.jpg');
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: top left;
   background-color: #330;
   height: 100vh;
   width: 100vw;
@@ -18,8 +18,9 @@ body {
   font-size: 3.5vh;
   font-family: Arial, Helvetica, sans-serif;
   color: white;
+  text-shadow: 0px 0px 5px rgb(0 0 0 / 100%);
 }
 
 a, a:link {
-  color: #ddd;
+  color: #fed;
 }
